--- a/Level6/Practice/Rock-The-Vote/client/package.json
+++ b/Level6/Practice/Rock-The-Vote/client/package.json
@@ -10,7 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^1.7.3",
+    "axios": "^1.6.7",
+    "buffer": "^6.0.3",
+    "events": "^3.3.0",
+    "mime": "^4.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.1"
@@ -19,10 +22,10 @@
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@vitejs/plugin-react": "^4.2.1",
-    "eslint": "^8.57.0",
+    "eslint": "^8.56.0",
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
-    "vite": "^5.2.0"
+    "vite": "^5.1.4"
   }
 }
