--- a/Level6/Practice/Rock-The-Vote/package.json
+++ b/Level6/Practice/Rock-The-Vote/package.json
@@ -11,10 +11,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "buffer": "^6.0.3",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-jwt": "^8.4.1",
     "jsonwebtoken": "^9.0.2",
+    "mime": "^4.0.4",
     "mongoose": "^8.5.2",
     "morgan": "^1.10.0"
   }
