--- a/Level6/Capstone/package.json
+++ b/Level6/Capstone/package.json
@@ -1,8 +1,10 @@
 {
   "dependencies": {
     "axios": "^1.7.4",
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-jwt": "^8.4.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.3",
     "morgan": "^1.10.0"
